# promo-tools

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  Dockerfile  Dockerfile-kpromo  Gopkg.toml  Makefile  Makefile-kpromo  OWNERS  OWNERS_ALIASES  README.md  RELEASE.md  SECURITY_CONTACTS  VERSION  WORKSPACE  buf.gen.yaml  buf.yaml  checks_interface.md  cip.go  cloudbuild.yaml  container-structure.yaml  dependencies.yaml  go.mod  go.sum  go_with_version.sh  lint.sh  list  list.2  list.3  list.6  repos.bzl  test.sh  workspace_status.sh
.github/: dependabot.yml
cmd/cip/: BUILD.bazel  main.go
cmd/cip-mm/: BUILD.bazel  README.md  main.go
cmd/cip/cmd/: BUILD.bazel  audit.go  root.go  run.go  version.go
cmd/promobot-files/: BUILD.bazel  README.md  main.go
cmd/promobot-generate-manifest/: BUILD.bazel  main.go
cmd/promobot-stage-and-hash-files/: BUILD.bazel  main.go
dashboard/: BUILD.bazel  dashboard.go  vulnerability_dashboard.md
dashboard/adapter/: BUILD.bazel  adapter.go  adapter_test.go  types.go
dev/: build-file-manifest
docker/: config.json
docs/: checks.md  development.md  file-promotion.md  github-promotion.md  image-promotion.md  kpromo.md  promotion-pull-requests.md
filepromoter/: file.go  filestore.go  filestore_test.go  gcs.go  manifest.go  token.go
gh2gcs/: gh2gcs.go
hack/: cip-image.sh  count-requests.go  init-buildx.sh  local-audit.sh  num-images-in-registry.go  push-cip.sh  test-cip-image.sh  test-go.sh  verify-archives.sh  verify-boilerplate.sh  verify-build.sh  (+6 more)
internal/version/: BUILD.bazel  version.go  version_test.go
legacy/audit/: BUILD.bazel  auditor.go  auditor_test.go  types.go
legacy/cli/: BUILD.bazel  audit.go  root.go  run.go  version.go
legacy/dockerregistry/: BUILD.bazel  checks.go  checks_test.go  grow_manifest.go  grow_manifest_test.go  inventory.go  inventory_test.go  set.go  types.go
legacy/gcloud/: BUILD.bazel  token.go
legacy/logclient/: BUILD.bazel  persistance.go  persistence.go
legacy/remotemanifest/: BUILD.bazel  fake.go  git.go  types.go
legacy/report/: BUILD.bazel
legacy/stream/: BUILD.bazel  http.go  types.go
lib/: go.mod  (+1 more)
lib/audit/: BUILD.bazel  auditor.go  auditor_test.go  types.go
lib/dockerregistry/: BUILD.bazel  checks.go  checks_test.go  grow_manifest.go  grow_manifest_test.go  inventory.go  inventory_test.go  set.go  types.go
lib/dockerregistry/inventory_test/TestParseManifestsFromDir/basic/: manifest.yaml
lib/dockerregistry/inventory_test/TestParseManifestsFromDir/basic-thin/thin-manifests/: promoter-manifest.yaml
lib/dockerregistry/inventory_test/TestParseManifestsFromDir/basic/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestParseManifestsFromDir/basic/b/c/: manifest.yaml  promoter-manifest.yaml
lib/dockerregistry/inventory_test/TestParseManifestsFromDir/multiple-rebases/a/: manifest.yaml
lib/dockerregistry/inventory_test/TestParseManifestsFromDir/multiple-rebases/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestParseManifestsFromDir/singleton/a/: manifest.yaml  promoter-manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/invalid/: empty
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/invalid/different-dst-registries/a/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/invalid/different-dst-registries/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/invalid/different-dst-registry-creds/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/invalid/overlapping-destination-vertices-different-digest-by-rename/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/invalid/overlapping-destination-vertices-different-digest/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/invalid/overlapping-renames-across-manifests/a/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/invalid/overlapping-renames-across-manifests/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/invalid/overlapping-renames-invalid-manifest/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/invalid/overlapping-src-registries/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/valid/: basic  multiple-rebases  singleton
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/valid/overlapping-destination-vertices-same-digest-by-rename/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/valid/overlapping-destination-vertices-same-digest/a/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/valid/overlapping-destination-vertices-same-digest/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/valid/overlapping-src-registries/a/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateManifestsFromDir/valid/overlapping-src-registries/b/: manifest.yaml
lib/dockerregistry/inventory_test/TestValidateThinManifestsFromDir/invalid/malformed-directory-tree-structure-bad-prefix/: README.md
lib/json/: BUILD.bazel  json.go
lib/report/: BUILD.bazel  fake.go  gcp.go
lib/stream/: BUILD.bazel  fake.go  http.go  subprocess.go  types.go
pkg/audit/: BUILD.bazel  auditor.go  auditor_test.go  types.go
pkg/cmd/: BUILD.bazel  hash.go  hash_test.go  promotefiles.go  readmanifest_test.go
pkg/dockerregistry/: BUILD.bazel  checks.go  checks_test.go  grow_manifest.go  grow_manifest_test.go  inventory.go  inventory_test.go  set.go  types.go
pkg/filepromoter/: BUILD.bazel  file.go  filestore.go  fsstore.go  fsstore_test.go  gcs.go  gzip.go  interfaces.go  manifest.go  token.go
pkg/filepromoter/testdata/: expected-listfiles.yaml
pkg/gcloud/: BUILD.bazel  token.go
pkg/golden/: BUILD.bazel  helpers.go
pkg/promobot/: BUILD.bazel  hash.go  hash_test.go  promotefiles.go  readmanifest_test.go
pkg/remotemanifest/: BUILD.bazel  fake.go  git.go  types.go
pkg/report/: BUILD.bazel  gcp.go  types.go
(+280 files in other folders)
