load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["dashboard.go"],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/dashboard",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/vulndash/adapter:go_default_library",
        "@io_k8s_klog_v2//:go_default_library",
    ],
)

go_binary(
    name = "dashboard",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
