load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cip_lib",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/cmd/cip",
    visibility = ["//visibility:private"],
    deps = ["//cmd/cip/cmd"],
)

go_binary(
    name = "cip",
    embed = [":cip_lib"],
    visibility = ["//visibility:public"],
)
