load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/cmd/promobot-files",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_binary(
    name = "promobot-files",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

# Support local installation
load("@com_github_google_rules_install//installer:def.bzl", "installer")

installer(
    name = "install",
    data = [":promobot-files"],
)

# Container image
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

go_image(
    name = "container-image",
    embed = [":go_default_library"],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/cmd/promobot-files",
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    base = "@google-sdk-base//image",
)

container_bundle(
    name = "image-bundle",
    images = {
        "{STABLE_IMG_REGISTRY}/{STABLE_IMG_REPOSITORY}/{STABLE_IMG_NAME}-files:latest": ":container-image",
        "{STABLE_IMG_REGISTRY}/{STABLE_IMG_REPOSITORY}/{STABLE_IMG_NAME}-files:{IMG_TAG}": ":container-image",
    },
)

docker_push(
    name = "push-image-bundle",
    bundle = "image-bundle",
)

