load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/cmd/promobot-generate-manifest",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_binary(
    name = "promobot-files",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
