load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/cmd/promobot-stage-and-hash-files",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api/files:go_default_library",
        "//pkg/cmd:go_default_library",
        "//pkg/gcloud:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_binary(
    name = "promobot-files",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
