load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dockerregistry",
    srcs = [
        "checks.go",
        "grow_manifest.go",
        "inventory.go",
        "set.go",
        "types.go",
    ],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/legacy/dockerregistry",
    visibility = ["//visibility:public"],
    deps = [
        "//legacy/container",
        "//legacy/gcloud",
        "//legacy/json",
        "//legacy/stream",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_google_go_containerregistry//pkg/crane",
        "@com_github_google_go_containerregistry//pkg/v1:pkg",
        "@com_github_google_go_containerregistry//pkg/v1/google",
        "@com_github_google_go_containerregistry//pkg/v1/types",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_google_cloud_go//containeranalysis/apiv1",
        "@in_gopkg_src_d_go_git_v4//:go-git_v4",
        "@in_gopkg_src_d_go_git_v4//plumbing",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_google_api//iterator",
        "@org_golang_google_genproto//googleapis/grafeas/v1:grafeas",
        "@org_golang_x_xerrors//:xerrors",
    ],
)

go_test(
    name = "dockerregistry_test",
    srcs = [
        "checks_test.go",
        "grow_manifest_test.go",
        "inventory_test.go",
    ],
    embed = [":dockerregistry"],
    deps = [
        "//legacy/json",
        "//legacy/stream",
        "@com_github_google_go_containerregistry//pkg/v1/types",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_genproto//googleapis/grafeas/v1:grafeas",
        "@org_golang_x_xerrors//:xerrors",
    ],
)
