load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gcloud",
    srcs = ["token.go"],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/legacy/gcloud",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:logrus",
        "@io_k8s_sigs_release_utils//command",
    ],
)
