load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logclient",
    srcs = [
        "fake.go",
        "gcp.go",
        "types.go",
    ],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/legacy/logclient",
    visibility = ["//visibility:public"],
    deps = ["@com_google_cloud_go_logging//:logging"],
)
