load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "report",
    srcs = [
        "fake.go",
        "gcp.go",
        "types.go",
    ],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/legacy/report",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:logrus",
        "@com_google_cloud_go//errorreporting",
    ],
)
