load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "auditor.go",
        "types.go",
    ],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/lib/audit",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/dockerregistry:go_default_library",
        "//lib/logclient:go_default_library",
        "//lib/remotemanifest:go_default_library",
        "//lib/report:go_default_library",
        "//lib/stream:go_default_library",
        "@com_google_cloud_go//errorreporting:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["auditor_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//lib/dockerregistry:go_default_library",
        "//lib/logclient:go_default_library",
        "//lib/remotemanifest:go_default_library",
        "//lib/report:go_default_library",
    ],
)
