load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["json.go"],
    importpath = "github.com/GoogleCloudPlatform/k8s-container-image-promoter/lib/json",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v2//:go_default_library"],
)
