load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fake.go",
        "http.go",
        "subprocess.go",
        "types.go",
    ],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/lib/stream",
    visibility = ["//visibility:public"],
)
