load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "checks.go",
        "grow_manifest.go",
        "inventory.go",
        "set.go",
        "types.go",
    ],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/pkg/dockerregistry",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/container:go_default_library",
        "//pkg/json:go_default_library",
        "//pkg/stream:go_default_library",
        "//pkg/gcloud:go_default_library",
        "@com_github_google_go_containerregistry//pkg/crane:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/google:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/types:go_default_library",
        "@com_google_cloud_go//containeranalysis/apiv1:go_default_library",
        "@go_googleapis//grafeas/v1:grafeas_go_proto",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "checks_test.go",
        "grow_manifest_test.go",
        "inventory_test.go",
    ],
    # Include test fixtures.
    data = glob(["inventory_test/**/*"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/json:go_default_library",
        "//pkg/stream:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/types:go_default_library",
        "@go_googleapis//grafeas/v1:grafeas_go_proto",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)
