load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "file.go",
        "filestore.go",
        "fsstore.go",
        "gcs.go",
        "interfaces.go",
        "manifest.go",
        "token.go",
    ],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/pkg/filepromoter",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/files:go_default_library",
        "//pkg/gcloud:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["fsstore_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = ["//pkg/golden:go_default_library"],
)
