load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["token.go"],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/pkg/gcloud",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_klog_v2//:go_default_library",
    ],
)
