load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fake.go",
        "git.go",
        "types.go",
    ],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/pkg/remotemanifest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dockerregistry:go_default_library",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)
