load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fake.go",
        "gcp.go",
        "types.go",
    ],
    importpath = "sigs.k8s.io/k8s-container-image-promoter/pkg/report",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go//errorreporting:go_default_library",
        "@io_k8s_klog_v2//:go_default_library",
    ],
)
